--- a/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,11 @@
                                     <i class="fas fa-calendar-alt me-1"></i>Thuê của tôi
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-page="/ChatPages/Index">
+                                    <i class="fas fa-comments me-1"></i>Chat
+                                </a>
+                            </li>
                         }
                     </ul>
                     <!-- Cải thiện authentication menu với icons và styling -->
