fix: bug remove cshtml files

--- a/Rentify.RazorWebApp/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -37,6 +37,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-page="/Admin/Category/Index">
+                            <i class="fas fa-tags me-3"></i>Quản lý Category
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" asp-page="/Admin/Items/Index">
                             <i class="fas fa-box me-3"></i>Quản lý Items
                         </a>
