--- a/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-page="/ChatPages/Index">
+                                <a class="nav-link text-dark" asp-page="/ChatPages/Chat">
                                     <i class="fas fa-comments me-1"></i>Chat
                                 </a>
                             </li>
